fix: responsiveness for lg, xl screens extra margin

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -609,6 +609,11 @@ video {
   margin-bottom: 1rem;
 }
 
+.mx-40 {
+  margin-left: 10rem;
+  margin-right: 10rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -647,6 +652,14 @@ video {
 
 .mr-4 {
   margin-right: 1rem;
+}
+
+.ml-40 {
+  margin-left: 10rem;
+}
+
+.mr-40 {
+  margin-right: 10rem;
 }
 
 .flex {
@@ -1657,6 +1670,11 @@ body {
 }
 
 @media (min-width: 1024px) {
+  .lg\:mx-20 {
+    margin-left: 5rem;
+    margin-right: 5rem;
+  }
+
   .lg\:max-w-5xl {
     max-width: 64rem;
   }
@@ -1668,6 +1686,11 @@ body {
   .lg\:border-slate-200 {
     --tw-border-opacity: 1;
     border-color: rgb(226 232 240 / var(--tw-border-opacity));
+  }
+
+  .lg\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 
   .lg\:backdrop-blur-sm {
@@ -1686,10 +1709,20 @@ body {
   .xl\:max-w-7xl {
     max-width: 80rem;
   }
+
+  .xl\:px-32 {
+    padding-left: 8rem;
+    padding-right: 8rem;
+  }
 }
 
 @media (min-width: 1536px) {
   .\32xl\:max-w-\[96rem\] {
     max-width: 96rem;
+  }
+
+  .\32xl\:px-64 {
+    padding-left: 16rem;
+    padding-right: 16rem;
   }
 }
